Fix: Table text alignment

--- a/src/components/studentProfile/StudentProfile.module.css
+++ b/src/components/studentProfile/StudentProfile.module.css
@@ -95,6 +95,9 @@
   color: #ffffff;
 }
 .swiper table {
+  text-align: left;
+}
+.swiper table .col2 {
   text-align: right;
 }
 .swiper button:hover {
